--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Bar Chart</title>
-  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="d3lib.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.0/lodash.min.js"></script>
   <style>
   table {
