--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
         <tr>
           <td>Start Date : </td>
           <td><input type="text" id="startdate" maxlength=30 required></td>
+          <td>Format : dd-mm-yyyy</td>
         </tr>
         <tr>
           <td>End Date : </td>
           <td><input type="text" id="enddate" maxlength=30 required></td>
         </tr>
       </table>
+      <br/>
       <div align="center">
         <input type="button" value="Search" onclick="showBy()">
       </div>
@@ -54,4 +56,3 @@
         <script src="assign1js.js"></script>
 </body>
 </html>
-
