--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <tr>
           <td>Region : </td>
           <td>
-            <select id="region" name="regionName"  required>
+            <select id="region"  required>
               <option selected value="select"> Select the region... </option>
               <option value="state"> State </option>
               <option value="district"> District </option>
@@ -34,7 +34,7 @@
         </tr>
         <tr>
           <td>Region Name : </td>
-          <td><input type="text" id="regionname" maxlength=30 required></td>
+          <td><input type="text" id="regionName" maxlength=30 required></td>
         </tr>
         <tr>
           <td>Start Date : </td>
